# hwinfo-rs

./: Cargo.toml  README.md  build.rs
examples/: system_report.rs
hwinfo/: .gitignore  CMakeLists.txt
hwinfo/include/hwinfo/: hwinfo_c.h
hwinfo/src/: hwinfo_c.cpp
src/: hwinfo.rs  lib.rs
