[package]
name = "hwinfo-rs"
author = "axolotl32"
description = "Rust bindings to the lfreist/hwinfo library"
readme = "README.md"
keywords = ["ffi", "hwid", "hwinfo"]
categories = ["api-bindings"]
repository = "https://github.com/axolotl32/hwinfo-rs"
# same as library the wrapper uses
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]

[build-dependencies]
bindgen = "0.71.0"
cmake = "0.1.54"